--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "stop": "egg-scripts stop --title=egg-server-gitlab-bot",
     "dev": "egg-bin dev",
     "debug": "egg-bin debug",
-    "test": "npm run lint -- --fix && npm run test-local",
+    "test": "yarn lint --fix && yarn test-local",
     "test-local": "egg-bin test",
     "cov": "egg-bin cov",
     "lint": "eslint .",
-    "ci": "npm run lint && npm run cov",
+    "ci": "yarn lint && yarn cov",
     "autod": "autod"
   },
   "ci": {
