chore: set default start script to run in foreground

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "node": ">=10.0.0"
   },
   "scripts": {
-    "start": "egg-scripts start --daemon --title=egg-server-gitlab-bot",
+    "start": "egg-scripts start --title=egg-server-gitlab-bot",
+    "start-daemon": "egg-scripts start --daemon --title=egg-server-gitlab-bot",
     "stop": "egg-scripts stop --title=egg-server-gitlab-bot",
     "dev": "egg-bin dev",
     "debug": "egg-bin debug",
