--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "egg-ci": "^1.11.0",
     "egg-mock": "^3.21.0",
     "eslint": "^5.13.0",
-    "eslint-config-egg": "^7.1.0"
+    "eslint-config-egg": "^7.1.0",
+    "husky": "^4.3.6",
+    "lint-staged": "^10.5.3"
   },
   "engines": {
     "node": ">=10.0.0"
@@ -35,6 +37,14 @@
     "lint": "eslint .",
     "ci": "yarn lint && yarn cov",
     "autod": "autod"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": "yarn lint --fix"
   },
   "ci": {
     "version": "10"
