--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "declarations": true
   },
   "dependencies": {
+    "@gitbeaker/node": "^28.0.1",
     "egg": "^2.15.1",
     "egg-scripts": "^2.11.0",
     "node-fetch": "^2.6.1"
