--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@gitbeaker/node": "^28.0.1",
     "egg": "^2.15.1",
     "egg-scripts": "^2.11.0",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "autod": "^3.0.1",
